--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,13 @@
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
+    <string-array name="periods">
+    <item>주 1일</item>
+    <item>주 2일</item>
+    <item>주 3일</item>
+    <item>주 4일</item>
+    <item>주 5일</item>
+    <item>주 6일</item>
+    <item>주 7일</item>
+    </string-array>
 </resources>
