--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,15 +1,6 @@
 <resources>
-    <string name="app_name">DailyFootprint</string>
-    <string name="title_home">Home</string>
-    <string name="title_dashboard">Dashboard</string>
-    <string name="title_notifications">Notifications</string>
-    <string-array name="periods">
-    <item>주 1일</item>
-    <item>주 2일</item>
-    <item>주 3일</item>
-    <item>주 4일</item>
-    <item>주 5일</item>
-    <item>주 6일</item>
-    <item>주 7일</item>
-    </string-array>
+    <string name="app_name" translatable="false">DailyFootprint</string>
+    <string name="title_home" translatable="false">Home</string>
+    <string name="title_dashboard" translatable="false">Dashboard</string>
+    <string name="title_notifications" translatable="false">Notifications</string>
 </resources>
